--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-11 Sat 21:56]
+#+CAPTION: Clock summary at [2019-05-11 Sat 22:01]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *38:30* |       |      | 100.0 |
+| *Total time*                                               | *38:34* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 38:30   |       |      | 100.0 |
-| Active                                                     |         | 38:30 |      | 100.0 |
+| Stories                                                    | 38:34   |       |      | 100.0 |
+| Active                                                     |         | 38:34 |      | 100.0 |
 | Edit release notes for previous sprint                     |         |       | 2:41 |   7.0 |
 | Create a video demo for the previous sprint's features     |         |       | 2:11 |   5.7 |
 | Sprint and product backlog grooming                        |         |       | 1:01 |   2.6 |
@@ -30,7 +30,7 @@
 | Try to add relational tracing support                      |         |       | 2:51 |   7.4 |
 | Linux and OSX binaries are not stripped                    |         |       | 1:23 |   3.6 |
 | Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  18.7 |
-| Replace JSON based feature templates with generated code   |         |       | 9:46 |  25.4 |
+| Replace JSON based feature templates with generated code   |         |       | 9:50 |  25.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-11 Sat 21:57]--[2019-05-11 Sat 22:01] =>  0:04
     CLOCK: [2019-05-11 Sat 21:54]--[2019-05-11 Sat 21:56] =>  0:02
     CLOCK: [2019-05-11 Sat 21:45]--[2019-05-11 Sat 21:53] =>  0:08
     CLOCK: [2019-05-11 Sat 21:40]--[2019-05-11 Sat 21:44] =>  0:04
