--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-11 Sat 22:05]
-| <75>                                                       |         |       |      |       |
-| Headline                                                   | Time    |       |      |     % |
-|------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *38:37* |       |      | 100.0 |
-|------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 38:37   |       |      | 100.0 |
-| Active                                                     |         | 38:37 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |   6.9 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   5.7 |
-| Sprint and product backlog grooming                        |         |       | 1:01 |   2.6 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   1.3 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   0.9 |
-| Create namespaces for model elements                       |         |       | 8:59 |  23.3 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.0 |
-| Try to add relational tracing support                      |         |       | 2:51 |   7.4 |
-| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   3.6 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  18.7 |
-| Replace JSON based feature templates with generated code   |         |       | 9:53 |  25.6 |
+#+CAPTION: Clock summary at [2019-05-11 Sat 22:31]
+| <75>                                                       |         |       |       |       |
+| Headline                                                   | Time    |       |       |     % |
+|------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                               | *39:01* |       |       | 100.0 |
+|------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                    | 39:01   |       |       | 100.0 |
+| Active                                                     |         | 39:01 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   6.9 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.6 |
+| Sprint and product backlog grooming                        |         |       |  1:01 |   2.6 |
+| Defining profiles directly on a target model does not work |         |       |  0:30 |   1.3 |
+| Inner modules need to be qualified                         |         |       |  0:22 |   0.9 |
+| Create namespaces for model elements                       |         |       |  8:59 |  23.0 |
+| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   4.0 |
+| Try to add relational tracing support                      |         |       |  2:51 |   7.3 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.5 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  18.5 |
+| Replace JSON based feature templates with generated code   |         |       | 10:17 |  26.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,8 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-11 Sat 22:21]--[2019-05-11 Sat 22:31] =>  0:10
+    CLOCK: [2019-05-11 Sat 22:06]--[2019-05-11 Sat 22:20] =>  0:14
     CLOCK: [2019-05-11 Sat 22:02]--[2019-05-11 Sat 22:05] =>  0:03
     CLOCK: [2019-05-11 Sat 21:57]--[2019-05-11 Sat 22:01] =>  0:04
     CLOCK: [2019-05-11 Sat 21:54]--[2019-05-11 Sat 21:56] =>  0:02
@@ -461,6 +463,13 @@ Tasks:
   registrar as input.
 - update all models to define features in the meta-model.
 - remove all JSON files.
+
+Notes:
+
+- the formatter is a feature. The postfix, enabled etc should be with
+  the formatter itself and it should register the feature. However,
+  the problem is then with the static representation of the
+  configuration. But perhaps this is not needed?
 
 *** Add a method in enumeration that converts it from strings         :story:
 
