--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-11 Sat 22:57]
+#+CAPTION: Clock summary at [2019-05-12 Sun 09:24]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *39:26* |       |       | 100.0 |
+| *Total time*                                               | *39:45* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 39:26   |       |       | 100.0 |
-| Active                                                     |         | 39:26 |       | 100.0 |
+| Stories                                                    | 39:45   |       |       | 100.0 |
+| Active                                                     |         | 39:45 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   6.8 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.5 |
 | Sprint and product backlog grooming                        |         |       |  1:01 |   2.6 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   1.3 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.9 |
-| Create namespaces for model elements                       |         |       |  8:59 |  22.8 |
+| Create namespaces for model elements                       |         |       |  8:59 |  22.6 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.9 |
 | Try to add relational tracing support                      |         |       |  2:51 |   7.2 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.5 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  18.3 |
-| Replace JSON based feature templates with generated code   |         |       | 10:42 |  27.1 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  18.2 |
+| Replace JSON based feature templates with generated code   |         |       | 11:01 |  27.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-12 Sun 09:05]--[2019-05-12 Sun 09:24] =>  0:19
     CLOCK: [2019-05-11 Sat 22:32]--[2019-05-11 Sat 22:57] =>  0:25
     CLOCK: [2019-05-11 Sat 22:21]--[2019-05-11 Sat 22:31] =>  0:10
     CLOCK: [2019-05-11 Sat 22:06]--[2019-05-11 Sat 22:20] =>  0:14
