--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-12 Sun 21:41]
+#+CAPTION: Clock summary at [2019-05-13 Mon 08:18]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *43:40* |       |       | 100.0 |
+| *Total time*                                               | *43:54* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 43:40   |       |       | 100.0 |
-| Active                                                     |         | 43:40 |       | 100.0 |
+| Stories                                                    | 43:54   |       |       | 100.0 |
+| Active                                                     |         | 43:54 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   6.1 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.0 |
-| Sprint and product backlog grooming                        |         |       |  1:01 |   2.3 |
+| Sprint and product backlog grooming                        |         |       |  1:10 |   2.7 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   1.1 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.8 |
-| Create namespaces for model elements                       |         |       |  8:59 |  20.6 |
+| Create namespaces for model elements                       |         |       |  8:59 |  20.5 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.5 |
 | Try to add relational tracing support                      |         |       |  2:51 |   6.5 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.2 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.5 |
-| Replace JSON based feature templates with generated code   |         |       | 14:56 |  34.2 |
+| Fix issues with nightly build and CI                       |         |       |  0:05 |   0.2 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.4 |
+| Replace JSON based feature templates with generated code   |         |       | 14:56 |  34.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -169,6 +170,8 @@ Time spent creating the demo.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-13 Mon 08:14]--[2019-05-13 Mon 08:18] =>  0:04
+    CLOCK: [2019-05-13 Mon 08:02]--[2019-05-13 Mon 08:07] =>  0:05
     CLOCK: [2019-05-10 Fri 20:42]--[2019-05-10 Fri 20:48] =>  0:06
     CLOCK: [2019-05-10 Fri 11:35]--[2019-05-10 Fri 11:45] =>  0:10
     CLOCK: [2019-05-10 Fri 11:17]--[2019-05-10 Fri 11:34] =>  0:17
@@ -343,6 +346,13 @@ Links:
 
 - [[https://www.technovelty.org/linux/stripping-shared-libraries.html][Stripping shared libraries]]
 - [[https://cmake.org/pipermail/cmake/2012-March/049741.html][make install/strip does not strip static libraries]]
+
+*** STARTED Fix issues with nightly build and CI                      :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-13 Mon 08:08]--[2019-05-13 Mon 08:13] =>  0:05
+    :END:
+
+Time spent fixing build issues with either nightlies and/or CI.
 
 *** COMPLETED Initial analysis to code generate feature infrastructure :story:
     CLOSED: [2019-05-10 Fri 11:19]
@@ -542,10 +552,6 @@ Time spent reading the literature on variability.
 *** Emacs maintenance and exploration work                            :story:
 
 Any time spent improving emacs, exploring new modes, fixing snags, etc.
-
-*** Fix issues with nightly build and CI                              :story:
-
-Time spent fixing build issues with either nightlies and/or CI.
 
 ** Deprecated
 *** CANCELLED Consider adding enumerations in dynamic                 :story:
